--- a/style.css
+++ b/style.css
@@ -1,9 +1,29 @@
-.size 
-{
-  font-size: 6em; 
+body {
+  background-image: url(https://images.pexels.com/photos/2771926/pexels-photo-2771926.jpeg?auto=compress&cs=tinysrgb&w=600);
+  webkit-background-size: cover;
+  moz-background-size: cover;
+  o-background-size: cover;
+  background-size: cover;
+}
+*{
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+h1{
+  font-size: 40px;
+  margin-top: 4em;
+  margin-bottom: 15px;
 }
 .color
 {
-  color: #ff8800;
+  color: #000000;
 }
-background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+.color1
+{
+  color: #fad000;
+}
+.size 
+{
+  font-size: 3em; 
+}
